# cross-market-statarb

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.yaml  secrets.example.yaml
reports/: sensitivity.md  strategy_report.md
scripts/: download_data.py  run_backtest.py  run_ml.py  sensitivity.py
src/: config.py
src/analysis/: attribution.py  metrics.py  plots.py
src/backtest/: costs.py  engine.py
src/data/: align.py  fetch.py  sources.py
src/factors/: diagnostics.py  factor_model.py
src/ml/: __init__.py  cnn.py  dataset.py  meta_sizing.py
src/portfolio/: construct.py  execution.py  risk.py
src/signals/: zscore.py
tests/: test_costs.py  test_execution.py  test_funding.py  test_ml.py  test_no_lookahead.py  test_risk_constraints.py  test_signals.py
