[project]
name = "xmkt-statarb"
version = "0.1.0"
description = "Cross-market idiosyncratic mean-reversion statistical-arbitrage backtest"
requires-python = ">=3.11"
dependencies = [
    "pandas==2.2.3",
    "numpy==2.2.4",
    "scipy==1.15.2",
    "statsmodels==0.14.6",
    "pyarrow==24.0.0",
    "requests==2.33.1",
    "pyyaml==6.0.3",
    "matplotlib==3.10.9",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
